src/rules/flake8_bugbear/snapshots/ruff__rules__flake8_bugbear__tests__extend_immutable_calls.snap
---
source: src/rules/flake8_bugbear/mod.rs
expression: diagnostics
---
- kind:
    FunctionCallArgumentDefault: Depends
  location:
    row: 19
    column: 50
  end_location:
    row: 19
    column: 63
  fix: ~
  parent: ~

